istio/tests/egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: e-gateway
 namespace: istio-system
spec:
 selector:
   istio: egressgateway
 servers:
  - hosts:
      - "*"
    port:
      number: 80
      name: http
      protocol: HTTP
