istio/tests/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: gemini-server-istio-se
spec:
  hosts:
    - gemini-server
    # - 172.17.0.26
  ports:
    - name: http
      number: 7001
      protocol: HTTP
  location: MESH_INTERNAL
  resolution: DNS
