istio/tests/virtual-service_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  hosts:
    - "*"
  gateways:
    - guestbook-gateway
  http:
    - match:
      - uri:
        prefix: /
      route:
        - destination:
            host: guestbook-ui
